tests/baselines/reference/parserUnicode1.errors.txt
==== tests/cases/compiler/parserUnicode1.ts (2 errors) ====
    try {
      var \u0078x = 6;
    
      if (xx !== 6) {
    
        $ERROR('#6.1: var \\u0078x = 1; xx === 6. Actual: ' + (xx));
        ~~~~~~
!!! parserUnicode1.ts(6,5): error TS2095: Cannot find name '$ERROR'.
      }
    }
    catch (e) {
        $ERROR('#6.2: var \\u0078x = 1; xx === 6. Actual: ' + (xx));
        ~~~~~~
!!! parserUnicode1.ts(10,5): error TS2095: Cannot find name '$ERROR'.
    
    }